crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__file[parquet]-duckdb[file]-on_zero_results_tpcds_q89.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q89"
---
+------------+-----------+--------------------+--------------+----------------+-------+-----------+-------------------+
| i_category | i_class   | i_brand            | s_store_name | s_company_name | d_moy | sum_sales | avg_monthly_sales |
+------------+-----------+--------------------+--------------+----------------+-------+-----------+-------------------+
| Music      | classical | edu packscholar #2 | ation        | Unknown        | 3     | 3298.11   | 7507.714166666666 |
| Music      | classical | edu packscholar #2 | ation        | Unknown        | 4     | 3550.86   | 7507.714166666666 |
| Music      | classical | edu packscholar #2 | able         | Unknown        | 6     | 3755.79   | 7687.866666666666 |
| Music      | classical | edu packscholar #2 | able         | Unknown        | 2     | 3757.45   | 7687.866666666666 |
| Music      | classical | edu packscholar #2 | bar          | Unknown        | 6     | 3408.82   | 7242.218333333333 |
| Music      | classical | edu packscholar #2 | eing         | Unknown        | 5     | 3720.76   | 7549.881666666665 |
| Children   | infants   | importoexporti #2  | ese          | Unknown        | 3     | 3152.45   | 6935.281666666667 |
| Music      | classical | edu packscholar #2 | ese          | Unknown        | 3     | 3692.96   | 7471.503333333333 |
| Music      | classical | edu packscholar #2 | eing         | Unknown        | 7     | 3778.65   | 7549.881666666665 |
| Children   | infants   | importoexporti #2  | bar          | Unknown        | 2     | 2986.60   | 6742.47           |
+------------+-----------+--------------------+--------------+----------------+-------+-----------+-------------------+
