crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__file[parquet]-duckdb[file]-on_zero_results_tpcds_q9.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q9"
---
+-------------------+--------------------+--------------------+--------------------+-------------------+
| bucket1           | bucket2            | bucket3            | bucket4            | bucket5           |
+-------------------+--------------------+--------------------+--------------------+-------------------+
| 39.58666235453536 | 116.11497611055161 | 192.43918583506914 | 267.18766167053826 | 342.9667589085598 |
+-------------------+--------------------+--------------------+--------------------+-------------------+
