crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__file[parquet]-duckdb[file]_tpcds_q53.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q53"
---
+---------------+-----------+---------------------+
| i_manufact_id | sum_sales | avg_quarterly_sales |
+---------------+-----------+---------------------+
| 115           | 3.33      | 176.99              |
| 115           | 22.13     | 176.99              |
| 115           | 505.51    | 176.99              |
| 37            | 3.03      | 224.79666666666665  |
| 37            | 11.64     | 224.79666666666665  |
| 37            | 659.72    | 224.79666666666665  |
| 929           | 1.85      | 226.82              |
| 929           | 451.79    | 226.82              |
| 945           | 107.35    | 258.15              |
| 945           | 408.95    | 258.15              |
+---------------+-----------+---------------------+
