crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__file[parquet]-duckdb[memory]-on_zero_results_small_clickbench_q7.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: clickbench_q7"
---
+--------------------------------------------------+--------------------------------------------------+
| min(to_timestamp(hits.EventDate * Int64(86400))) | max(to_timestamp(hits.EventDate * Int64(86400))) |
+--------------------------------------------------+--------------------------------------------------+
| 2013-07-15T00:00:00                              | 2013-07-15T00:00:00                              |
+--------------------------------------------------+--------------------------------------------------+
