crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__file[parquet]-duckdb[memory]-on_zero_results_tpcds_q31.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q31"
---
+--------------------+--------+--------------------+----------------------+--------------------+----------------------+
| ca_county          | d_year | web_q1_q2_increase | store_q1_q2_increase | web_q2_q3_increase | store_q2_q3_increase |
+--------------------+--------+--------------------+----------------------+--------------------+----------------------+
| Allen County       | 1999   | 2.584079           | 1.807025             | 1.771142           | 0.707735             |
| Assumption Parish  | 1999   | 1.974211           | 1.738542             | 1.546897           | 0.862802             |
| Barnwell County    | 1999   | 2.960794           | 1.323611             | 0.798268           | 0.221147             |
| Bristol County     | 1999   | 1.568644           | 0.521069             | 0.839930           | 0.646804             |
| Camden County      | 1999   | 1.592952           | 0.803492             | 2.978875           | 1.858185             |
| Charles Mix County | 1999   | 3.357464           | 0.246547             | 0.896660           | 0.748102             |
| Chickasaw County   | 1999   | 0.958376           | 0.563933             | 1.940111           | 0.622751             |
| Claiborne County   | 1999   | 0.997355           | 0.692804             | 4.327476           | 1.396984             |
| Clay County        | 1999   | 0.708214           | 0.617352             | 3.592323           | 1.987497             |
| Colfax County      | 1999   | 2.058834           | 1.541109             | 1.029902           | 0.570131             |
+--------------------+--------+--------------------+----------------------+--------------------+----------------------+
